No automatic keyframe insertion with X-Mirror on armature in Pose Mode #75142

Closed
opened 2020-03-27 20:35:59 +01:00 by Henrik D. · 5 comments
Member

System Information
Operating system: Linux (Debian bullseye)
Graphics card: Nvidia Geforce GTX 1070

Blender Version
Broken: 2.82a up to current master (2.83.10)
Worked: 2.81a

Short description of error
When using X-Mirror in Pose Mode of an armature with auto keying enabled only the modified
bone will get a keyframe inserted. The mirrored Bone will be affected but will not get a keyframe.

Exact steps for others to reproduce the error

#75142-autokeying-mirrored-bones.blend

  • Open this file, it's set up for X-mirror and auto-keying LocRot.
  • Rotate the bone Arm_R. This automatically rotates Arm_L due to the mirroring.
  • See that Arm_R is auto-keyed, but Arm_L is not.
**System Information** Operating system: Linux (Debian bullseye) Graphics card: Nvidia Geforce GTX 1070 **Blender Version** Broken: 2.82a up to current master (2.83.10) Worked: 2.81a **Short description of error** When using X-Mirror in Pose Mode of an armature with auto keying enabled only the modified bone will get a keyframe inserted. The mirrored Bone will be affected but will not get a keyframe. **Exact steps for others to reproduce the error** [#75142-autokeying-mirrored-bones.blend](https://archive.blender.org/developer/F8436583/T75142-autokeying-mirrored-bones.blend) * Open this file, it's set up for X-mirror and auto-keying LocRot. * Rotate the bone Arm_R. This automatically rotates Arm_L due to the mirroring. * See that Arm_R is auto-keyed, but Arm_L is not.
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-03-30 11:40:47 +02:00

This issue was referenced by a6a9a12e8f

This issue was referenced by a6a9a12e8f32058a52d88a4846db906782f0cafe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75142
No description provided.